--- a/sass/main.sass
+++ b/sass/main.sass
@@ -45,6 +45,9 @@ body input:required:valid,
 body textarea:required:valid
 	color: #969696
 
+section
+	text-align: center
+
 a
 	&:focus
 		outline: none
@@ -137,6 +140,8 @@ a
 	background-repeat: no-repeat
 	text-align: center
 
+
+
 .title_wrap
 	text-align: center
 	margin-top: 43px
@@ -218,9 +223,132 @@ form
 	&:hover
 		background-image: linear-gradient(to top, #02488e 0%, #7a4321 0%, #ea6919  50%, #7a4321 99%, #7a4321 100%)
 
+.sect_white
+	padding-bottom: 30px
+	.title_sect_wrap
+		h2
+			color: black
+			font-family: "Open Sans"
+			font-size: 30px
+			font-weight: 700
+			display: block
+			position: relative
+			margin-top: 20px
+			margin-bottom: 50px
+			padding-bottom: 20px
+			&::before
+				content: ''
+				position: absolute
+				background-image: url(../img/border_title_grey.png)
+				width: 215px
+				height: 7px
+				left: 50%
+				transform: translate(-50%, 0)
+				bottom: 0
 
-		
+.item_preim
+	text-align: left
+	padding-left: 47px
+	.img_wrap
+		min-height: 59px
+		img
+			vertical-align: middle
+	h4
+		font-size: 16px
+		font-weight: 700
+		margin-top: 10px
+		margin-bottom: 0
+	p
+		font-size: 14px
+		font-weight: 300
+		line-height: 18px
+		margin-top: 0
 
+.row_pbot
+	margin-bottom: 40px
+
+.sect_color
+	padding-bottom: 30px
+	background-image: url(../img/bg_sect3.jpg)
+	min-height: 690px
+	background-size: cover
+	background-position: center
+	background-repeat: no-repeat
+	text-align: center
+	.title_sect_wrap
+		margin-bottom: 50px
+		h2
+			color: #fff
+			font-family: "Open Sans"
+			font-size: 30px
+			font-weight: 700
+			display: block
+			position: relative
+			margin-top: 10px
+			padding-top: 50px
+			margin-bottom: 20px
+			padding-bottom: 20px
+			&::before
+				content: ''
+				position: absolute
+				background-image: url(../img/border_title_white.png)
+				width: 215px
+				height: 7px
+				left: 50%
+				transform: translate(-50%, 0)
+				bottom: 0
+		p
+			color: #fff
+			margin-top: 0
+
+.item_sect3_left
+	text-align: left
+	position: relative
+	&::before
+		content: ''
+		position: absolute
+		width: 32px
+		height: 32px
+		background-image: url(../img/icon_sect3.png)
+		top: 28px
+		right: -16px
+	.number
+		display: inline-block
+		color: white
+		font-size: 50px
+		font-family: "opensansbold", $helvetica
+		margin-right: 27px
+	.item_descr
+		display: inline-block
+		width: 290px
+		p
+			line-height: 18px
+			color: #fff
+
+.item_sect3_right
+	text-align: right
+	position: relative
+	margin-top: 70px
+	&::before
+		content: ''
+		position: absolute
+		width: 32px
+		height: 32px
+		background-image: url(../img/icon_sect3.png)
+		top: 28px
+		left: -16px
+	.number
+		display: inline-block
+		color: white
+		font-size: 50px
+		font-family: "opensansbold", $helvetica
+		margin-left: 27px
+	.item_descr
+		display: inline-block
+		width: 290px
+		p
+			line-height: 18px
+			color: #fff
 		
 
 
