--- a/sass/main.sass
+++ b/sass/main.sass
@@ -236,6 +236,7 @@ form
 			margin-top: 20px
 			margin-bottom: 50px
 			padding-bottom: 20px
+			text-transform: uppercase
 			&::before
 				content: ''
 				position: absolute
@@ -349,10 +350,182 @@ form
 		p
 			line-height: 18px
 			color: #fff
-		
+
+.section4
+	margin-bottom: 40px
+	.title_sect_wrap
+		h2
+			margin-bottom: 20px
+			padding-top: 25px
+		p
+			font-size: 18px
+			width: 590px
+			display: inline-block
+			margin-top: 0
+	.top_button
+		display: inline-block
+		float: none
+		margin-left: 0
+		margin-top: 40px
+		a
+			padding: 16px 30px
+			font-family: "opensanssemibold", $helvetica
 
 
+.section5
+	background-image: url(../img/bg_sect5.jpg)
+	min-height: 512px
+	.title_sect_wrap
+		margin-bottom: 56px
+	.row
+		margin-bottom: 14px
+	.stroka
+		margin-top: 11px
+	.strokaIV
+		margin-left: 40px
+	.strokaIII
+		margin-right: 40px
+	.srokaVI
+		.number
+			position: relative
+			top: -12px
+	.item_sect3_left
+		text-align: right
+		.number
+			margin-left: 15px
+			margin-right: 0
+			font-size: 30px
+			vertical-align: middle
+			height: 100%
+		.item_descr
+			text-align: left
+			width: 267px
+			p
+				font-size: 16px
+		&::before
+			display: none
+	.item_sect3_right
+		text-align: left
+		.number
+			margin-right: 15px
+			margin-left: 0
+			font-size: 30px
+		margin-top: 0
+		.item_descr
+			text-align: right
+			width: 267px
+			p
+				font-size: 16px
+		&::before
+			display: none
 
+.section6
+	margin-bottom: 50px
+	.title_sect_wrap
+		h2
+			margin-bottom: 85px
+		margin-top: 50px
+	.row
+		margin-bottom: 40px
+	.item_first
+		text-align: left
+		display: inline-block
+		margin-left: -50px
+		position: relative
+		&::before
+			content: ''
+			position: absolute
+			background-image: url(../img/map_sect6_1.jpg)
+			width: 50px
+			height: 58px
+			top: -60px
+			left: 6px
+		&::after
+			content: ''
+			position: absolute
+			background-image: url(../img/map_sect6_2.jpg)
+			width: 122px
+			height: 90px
+			bottom: -65px
+			right: 119px
+		h3
+			font-size: 18px
+			font-weight: 700
+			text-transform: uppercase
+			line-height: 23px
+		.img_wrap
+			display: inline-block
+			position: relative
+			top: -26px
+			margin-right: 5px
+		.descr_wrap
+			width: 180px
+			display: inline-block
+	.wr_bef
+		&::before
+			content: ''
+			position: absolute
+			background-image: url(../img/map_sect6_4.jpg)
+			width: 48px
+			height: 109px
+			bottom: -82px
+			left: 54px
+	.item1_sect6
+		text-align: left
+		display: inline-block
+		margin-left: -74px
+		margin-top: -9px
+		h4
+			font-size: 14px
+			font-weight: 700
+			text-transform: uppercase
+			margin-bottom: 0
+		.img_wrap
+			display: inline-block
+			position: relative
+			top: -26px
+			margin-right: 5px
+		.descr_wrap
+			width: 250px
+			display: inline-block
+			p
+				margin-top: 0
+				line-height: 18px
+	.item_wr
+		margin-left: 32px
+		&::before
+			content: ''
+			position: absolute
+			background-image: url(../img/map_sect6_3.jpg)
+			width: 88px
+			height: 121px
+			top: -108px
+			left: 82px
+		.item1_sect6
+			.descr_wrap
+				width: 150px
+	.item_wr_last
+		&::before
+			content: ''
+			position: absolute
+			background-image: url(../img/map_sect6_5.jpg)
+			width: 99px
+			height: 46px
+			bottom: -23px
+			left: 80px
+		.item1_sect6
+			.descr_wrap
+				width: 180px
+			
+	.top_button
+		display: inline-block
+		float: none
+		margin-left: 0
+		margin-top: 50px
+		a
+			padding: 16px 50px
+			font-family: "opensanssemibold", $helvetica
+			font-weight: 600
 
 				
 				
