done not function

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -527,6 +527,228 @@ form
 			font-family: "opensanssemibold", $helvetica
 			font-weight: 600
 
-				
-				
 
+.section7
+	background-image: url(../img/bg_sect7.jpg)
+	min-height: 589px
+	
+.wrap_rash
+	width: 657px
+	height: 121px
+	display: inline-block
+	background-color: #7a4321
+	border-radius: 2px
+	.rash
+		display: inline-block
+		width: 651px
+		height: 115px
+		border: 1px solid white
+		margin-top: 3px
+		text-align: left
+		padding-left: 45px
+		p
+			text-shadow: 0 2px 2px black
+			color: white
+			font-size: 34px
+			strong
+				font-family: "opensansbold", $helvetica
+				line-height: 18px
+				font-size: 58px
+				font-weight: 700
+			span
+				text-shadow: 0 2px 2px black
+				font-size: 22px
+				font-weight: 400
+				line-height: 18px
+				text-transform: uppercase
+				display: inline-block
+				position: relative
+				margin-left: 24px
+				top: -13px
+				
+.wr_descr
+	h3
+		text-shadow: 0 2px 2px black
+		color: white
+		font-family: "Open Sans"
+		font-size: 24px
+		font-weight: 600
+		text-transform: uppercase	
+		line-height: 31px	
+		position: relative
+		margin-bottom: 62px
+		&::before
+			content: ''
+			width: 414px
+			height: 2px
+			background-color: #0d3e54		
+			position: absolute
+			bottom: -30px
+			left: 50%
+			transform: translate(-50%, 0)
+	p
+		color: white
+		font-size: 12px
+		font-style: italic
+		line-height: 14px
+		margin-top: 40px
+		span
+			text-shadow: 0 2px 2px black
+			font-size: 18px
+			font-style: normal
+			line-height: 19px
+
+.maps_form
+	position: relative
+	.maps_wr
+		display: block
+	.cantact_wrap
+		position: absolute
+		width: 559px
+		height: 116px
+		background-color: #0d3e54
+		border: 1px dashed white
+		box-shadow: 5.5px 12.9px 5px rgba(0, 0, 0, 0.44)
+		z-index: 30
+		top: 96px
+		left: 222px
+		&::after
+			content: ''
+			position: absolute
+			width: 0
+			display: block
+			height: 0
+			border-left: 17px solid transparent
+			border-right: 17px solid transparent
+			border-top: 15px solid #0d3e54
+			bottom: -15px
+			right: 100px
+		&::before
+			content: ''
+			position: absolute
+			width: 0
+			display: block
+			height: 0
+			border-left: 17px solid transparent
+			border-right: 17px solid transparent
+			border-top: 15px dashed #fff
+			bottom: -17px
+			right: 100px
+		.cont_tel
+			color: white
+			font-family: Arial
+			line-height: 18px
+			font-size: 20px
+			font-weight: 400
+			display: inline-block
+			position: relative
+			margin-left: 70px
+			margin-top: 47px
+			&::before
+				content: ''
+				position: absolute
+				width: 13px
+				display: block
+				height: 23px
+				background-image: url(../img/icon_tel_bot.png)
+				top: 0
+				left: -30px
+			span
+				font-size: 28px
+				font-weight: 700
+		.cont_adres
+			color: white
+			font-size: 16px
+			font-weight: 400
+			display: inline-block
+			position: relative
+			width: 183px
+			margin-left: 86px
+			top: 10px
+			&::before
+				content: ''
+				position: absolute
+				width: 15px
+				display: block
+				height: 23px
+				background-image: url(../img/icon_adres.png)
+				top: 15px
+				left: -30px
+			
+
+.form_wrapper
+	position: absolute
+	top: 30px
+	right: 221px
+	background-color: #0d3e54
+	border: 1px dashed white
+	text-align: center
+	h3
+		color: white
+		font-family: Arial
+		font-size: 26px
+		font-weight: 700
+		line-height: 18px
+		text-transform: uppercase
+	input
+		margin: 0 44px
+		width: 310px
+		padding: 9px 10px
+	textarea
+		width: 310px
+		border-radius: 5px
+		border: none
+		padding: 6px 10px
+		font-size: 12px
+		color: #969696
+	button
+		width: 310px
+		margin-bottom: 20px
+		font-family: "opensansbold", $helvetica
+		text-transform: uppercase
+
+
+footer
+	height: 110px
+	background-color: #024c6d
+	.contact
+		color: #fff
+		margin-top: 20px
+	.wrap_menu
+		text-align: left
+		.menu
+			float: none
+			margin-left: -60px
+			ul
+				text-align: left
+				li
+					&:first-child
+						a
+							&::before
+								display: none
+					a
+						font-size: 16px
+						&::before
+							content: ""
+							width: 0
+							height: 8px
+							position: absolute
+							border-right: 1px solid #fff
+							left: -3px
+							top: 20px
+
+.copyr
+	color: white
+	font-family: Arial
+	font-size: 14px
+	font-weight: 400
+	margin-top: 10px
+	p
+		margin: 0
+		margin-top: -5px
+	a
+		color: #7fb9d3
+		font-size: 12px
+		font-weight: 400
+		text-decoration: none
+		margin-left: 14px
