--- a/css/main.css
+++ b/css/main.css
@@ -507,4 +507,223 @@ form input {
       font-family: "opensanssemibold", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
       font-weight: 600; }
 
+.section7 {
+  background-image: url(../img/bg_sect7.jpg);
+  min-height: 589px; }
+
+.wrap_rash {
+  width: 657px;
+  height: 121px;
+  display: inline-block;
+  background-color: #7a4321;
+  border-radius: 2px; }
+  .wrap_rash .rash {
+    display: inline-block;
+    width: 651px;
+    height: 115px;
+    border: 1px solid white;
+    margin-top: 3px;
+    text-align: left;
+    padding-left: 45px; }
+    .wrap_rash .rash p {
+      text-shadow: 0 2px 2px black;
+      color: white;
+      font-size: 34px; }
+      .wrap_rash .rash p strong {
+        font-family: "opensansbold", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
+        line-height: 18px;
+        font-size: 58px;
+        font-weight: 700; }
+      .wrap_rash .rash p span {
+        text-shadow: 0 2px 2px black;
+        font-size: 22px;
+        font-weight: 400;
+        line-height: 18px;
+        text-transform: uppercase;
+        display: inline-block;
+        position: relative;
+        margin-left: 24px;
+        top: -13px; }
+
+.wr_descr h3 {
+  text-shadow: 0 2px 2px black;
+  color: white;
+  font-family: "Open Sans";
+  font-size: 24px;
+  font-weight: 600;
+  text-transform: uppercase;
+  line-height: 31px;
+  position: relative;
+  margin-bottom: 62px; }
+  .wr_descr h3::before {
+    content: "";
+    width: 414px;
+    height: 2px;
+    background-color: #0d3e54;
+    position: absolute;
+    bottom: -30px;
+    left: 50%;
+    transform: translate(-50%, 0); }
+.wr_descr p {
+  color: white;
+  font-size: 12px;
+  font-style: italic;
+  line-height: 14px;
+  margin-top: 40px; }
+  .wr_descr p span {
+    text-shadow: 0 2px 2px black;
+    font-size: 18px;
+    font-style: normal;
+    line-height: 19px; }
+
+.maps_form {
+  position: relative; }
+  .maps_form .maps_wr {
+    display: block; }
+  .maps_form .cantact_wrap {
+    position: absolute;
+    width: 559px;
+    height: 116px;
+    background-color: #0d3e54;
+    border: 1px dashed white;
+    box-shadow: 5.5px 12.9px 5px rgba(0, 0, 0, 0.44);
+    z-index: 30;
+    top: 96px;
+    left: 222px; }
+    .maps_form .cantact_wrap::after {
+      content: "";
+      position: absolute;
+      width: 0;
+      display: block;
+      height: 0;
+      border-left: 17px solid transparent;
+      border-right: 17px solid transparent;
+      border-top: 15px solid #0d3e54;
+      bottom: -15px;
+      right: 100px; }
+    .maps_form .cantact_wrap::before {
+      content: "";
+      position: absolute;
+      width: 0;
+      display: block;
+      height: 0;
+      border-left: 17px solid transparent;
+      border-right: 17px solid transparent;
+      border-top: 15px dashed #fff;
+      bottom: -17px;
+      right: 100px; }
+    .maps_form .cantact_wrap .cont_tel {
+      color: white;
+      font-family: Arial;
+      line-height: 18px;
+      font-size: 20px;
+      font-weight: 400;
+      display: inline-block;
+      position: relative;
+      margin-left: 70px;
+      margin-top: 47px; }
+      .maps_form .cantact_wrap .cont_tel::before {
+        content: "";
+        position: absolute;
+        width: 13px;
+        display: block;
+        height: 23px;
+        background-image: url(../img/icon_tel_bot.png);
+        top: 0;
+        left: -30px; }
+      .maps_form .cantact_wrap .cont_tel span {
+        font-size: 28px;
+        font-weight: 700; }
+    .maps_form .cantact_wrap .cont_adres {
+      color: white;
+      font-size: 16px;
+      font-weight: 400;
+      display: inline-block;
+      position: relative;
+      width: 183px;
+      margin-left: 86px;
+      top: 10px; }
+      .maps_form .cantact_wrap .cont_adres::before {
+        content: "";
+        position: absolute;
+        width: 15px;
+        display: block;
+        height: 23px;
+        background-image: url(../img/icon_adres.png);
+        top: 15px;
+        left: -30px; }
+
+.form_wrapper {
+  position: absolute;
+  top: 30px;
+  right: 221px;
+  background-color: #0d3e54;
+  border: 1px dashed white;
+  text-align: center; }
+  .form_wrapper h3 {
+    color: white;
+    font-family: Arial;
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 18px;
+    text-transform: uppercase; }
+  .form_wrapper input {
+    margin: 0 44px;
+    width: 310px;
+    padding: 9px 10px; }
+  .form_wrapper textarea {
+    width: 310px;
+    border-radius: 5px;
+    border: none;
+    padding: 6px 10px;
+    font-size: 12px;
+    color: #969696; }
+  .form_wrapper button {
+    width: 310px;
+    margin-bottom: 20px;
+    font-family: "opensansbold", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
+    text-transform: uppercase; }
+
+footer {
+  height: 110px;
+  background-color: #024c6d; }
+  footer .contact {
+    color: #fff;
+    margin-top: 20px; }
+  footer .wrap_menu {
+    text-align: left; }
+    footer .wrap_menu .menu {
+      float: none;
+      margin-left: -60px; }
+      footer .wrap_menu .menu ul {
+        text-align: left; }
+        footer .wrap_menu .menu ul li:first-child a::before {
+          display: none; }
+        footer .wrap_menu .menu ul li a {
+          font-size: 16px; }
+          footer .wrap_menu .menu ul li a::before {
+            content: "";
+            width: 0;
+            height: 8px;
+            position: absolute;
+            border-right: 1px solid #fff;
+            left: -3px;
+            top: 20px; }
+
+.copyr {
+  color: white;
+  font-family: Arial;
+  font-size: 14px;
+  font-weight: 400;
+  margin-top: 10px; }
+  .copyr p {
+    margin: 0;
+    margin-top: -5px; }
+  .copyr a {
+    color: #7fb9d3;
+    font-size: 12px;
+    font-weight: 400;
+    text-decoration: none;
+    margin-left: 14px; }
+
 /*# sourceMappingURL=main.css.map */
