--- a/sass/main.sass
+++ b/sass/main.sass
@@ -752,3 +752,39 @@ footer
 		font-weight: 400
 		text-decoration: none
 		margin-left: 14px
+
+.banner--clone 
+	width: 100%
+	background-color: #fff
+	img
+		width: 200px
+	.cantact_wr
+		padding: 0
+	.top_button
+		display: none
+	.contact
+		display: none
+	
+#form1, #form2, #form3
+	margin: auto
+	position: relative
+	width: 396px
+	background-color: #0d3e54
+	border: 1px solid white
+	text-align: center
+	h3
+		color: white
+		font-family: Arial
+		font-size: 22px
+		font-weight: 700
+		line-height: 18px
+		text-transform: uppercase
+	input, .button
+		width: 309px
+		margin-right: 0
+	.button
+		margin-bottom: 20px
+
+.mfp-close-btn-in
+	.mfp-close
+		color: #fff
