--- a/css/main.css
+++ b/css/main.css
@@ -38,11 +38,11 @@ body {
 
 body input:focus:required:invalid,
 body textarea:focus:required:invalid {
-  color: #969696; }
+  color: #000; }
 
 body input:required:valid,
 body textarea:required:valid {
-  color: #969696; }
+  color: #000; }
 
 section {
   text-align: center; }
@@ -196,9 +196,11 @@ form input {
   border-radius: 5px;
   padding: 6px 10px;
   font-size: 12px;
-  color: #969696;
+  color: #000;
   width: 190px;
   margin-right: 10px; }
+  form input:required {
+    color: #000; }
 
 .button {
   background-color: black;
@@ -218,7 +220,7 @@ form input {
   padding-bottom: 30px; }
   .sect_white .title_sect_wrap h2 {
     color: black;
-    font-family: "Open Sans";
+    font-family: "opensansbold", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
     font-size: 30px;
     font-weight: 700;
     display: block;
@@ -258,6 +260,17 @@ form input {
 .row_pbot {
   margin-bottom: 40px; }
 
+.row_mart {
+  top: -20px;
+  position: relative; }
+
+.row_mart_last {
+  top: -30px;
+  position: relative; }
+
+.item_sect3_right_last {
+  margin-top: 60px !important; }
+
 .sect_color {
   padding-bottom: 30px;
   background-image: url(../img/bg_sect3.jpg);
@@ -270,7 +283,7 @@ form input {
     margin-bottom: 50px; }
     .sect_color .title_sect_wrap h2 {
       color: #fff;
-      font-family: "Open Sans";
+      font-family: "opensansbold", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
       font-size: 30px;
       font-weight: 700;
       display: block;
@@ -297,14 +310,6 @@ form input {
   position: relative;
   border-bottom: 1px solid #012633;
   margin-right: 28px; }
-  .item_sect3_left::before {
-    content: "";
-    position: absolute;
-    width: 32px;
-    height: 32px;
-    background-image: url(../img/icon_sect3.png);
-    top: 28px;
-    right: -45px; }
   .item_sect3_left .number {
     display: inline-block;
     color: white;
@@ -318,20 +323,22 @@ form input {
       line-height: 18px;
       color: #fff; }
 
+.line_ic::after {
+  content: "";
+  position: absolute;
+  width: 32px;
+  height: 441px;
+  background-image: url(../img/line_sect2.png);
+  background-repeat: no-repeat;
+  top: -131px;
+  right: -43px; }
+
 .item_sect3_right {
   text-align: right;
   position: relative;
   border-bottom: 1px solid #012633;
   margin-left: 28px;
   margin-top: 70px; }
-  .item_sect3_right::before {
-    content: "";
-    position: absolute;
-    width: 32px;
-    height: 32px;
-    background-image: url(../img/icon_sect3.png);
-    top: 28px;
-    left: -43px; }
   .item_sect3_right .number {
     display: inline-block;
     color: white;
@@ -681,7 +688,7 @@ form input {
     border: none;
     padding: 6px 10px;
     font-size: 12px;
-    color: #969696; }
+    color: #000; }
   .form_wrapper button {
     width: 310px;
     margin-bottom: 20px;
@@ -746,27 +753,33 @@ footer {
   .banner--clone .contact {
     display: none; }
 
-#form1, #form2, #form3 {
+#form1, #form2, #form3, .done {
   margin: auto;
   position: relative;
   width: 396px;
   background-color: #0d3e54;
   border: 1px solid white;
   text-align: center; }
-  #form1 h3, #form2 h3, #form3 h3 {
+  #form1 h3, #form2 h3, #form3 h3, .done h3 {
     color: white;
     font-family: Arial;
     font-size: 22px;
     font-weight: 700;
     line-height: 18px;
     text-transform: uppercase; }
-  #form1 input, #form1 .button, #form2 input, #form2 .button, #form3 input, #form3 .button {
+  #form1 input, #form1 .button, #form2 input, #form2 .button, #form3 input, #form3 .button, .done input, .done .button {
     width: 309px;
     margin-right: 0; }
-  #form1 .button, #form2 .button, #form3 .button {
+  #form1 .button, #form2 .button, #form3 .button, .done .button {
     margin-bottom: 20px; }
 
 .mfp-close-btn-in .mfp-close {
-  color: #fff; }
+  color: #fff;
+  right: -10px;
+  top: -10px; }
+
+.done h3 {
+  line-height: 35px;
+  margin-top: 20px; }
 
 /*# sourceMappingURL=main.css.map */
